--- a/archives/toutiao-search/2024-02-13.md
+++ b/archives/toutiao-search/2024-02-13.md
@@ -1,67 +1,70 @@
 # 2024-02-13
 
-共 105 条
+共 106 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Feb 13 2024 06:00:47 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Feb 13 2024 07:00:49 GMT+0800 (China Standard Time) -->
 1. [贾玲瘦身后第一次见观众泪流满面](https://so.toutiao.com/search?keyword=贾玲瘦身后第一次见观众泪流满面)
 1. [尼格买提微表情被当成典型“案例”](https://so.toutiao.com/search?keyword=尼格买提微表情被当成典型“案例”)
 1. [看一条龙能多有“FUN儿”](https://so.toutiao.com/search?keyword=看一条龙能多有“FUN儿”)
 1. [中东多国谴责以色列进攻拉法计划](https://so.toutiao.com/search?keyword=中东多国谴责以色列进攻拉法计划)
-1. [贾玲张小斐坐在一起跷二郎腿](https://so.toutiao.com/search?keyword=贾玲张小斐坐在一起跷二郎腿)
-1. [摔炮的风还是吹到了伦敦](https://so.toutiao.com/search?keyword=摔炮的风还是吹到了伦敦)
 1. [以军对拉法发动海陆空全方位打击](https://so.toutiao.com/search?keyword=以军对拉法发动海陆空全方位打击)
+1. [摔炮的风还是吹到了伦敦](https://so.toutiao.com/search?keyword=摔炮的风还是吹到了伦敦)
+1. [贾玲张小斐坐在一起跷二郎腿](https://so.toutiao.com/search?keyword=贾玲张小斐坐在一起跷二郎腿)
 1. [四人酒后把猪食当成粥 吃饱才发现](https://so.toutiao.com/search?keyword=四人酒后把猪食当成粥+吃饱才发现)
-1. [美防长被转移至重症监护病房](https://so.toutiao.com/search?keyword=美防长被转移至重症监护病房)
 1. [普京接受采访的视频收看量达10亿次](https://so.toutiao.com/search?keyword=普京接受采访的视频收看量达10亿次)
 1. [央视文艺回复尼格买提：再播亿遍](https://so.toutiao.com/search?keyword=央视文艺回复尼格买提：再播亿遍)
-1. [这些“龙”背后的谣言你都知道吗](https://so.toutiao.com/search?keyword=这些“龙”背后的谣言你都知道吗)
-1. [《第二十条》教你如何保护自己](https://so.toutiao.com/search?keyword=《第二十条》教你如何保护自己)
-1. [过年的慵懒感到达顶峰](https://so.toutiao.com/search?keyword=过年的慵懒感到达顶峰)
-1. [贾玲肌肉被亲姐姐质疑是特效](https://so.toutiao.com/search?keyword=贾玲肌肉被亲姐姐质疑是特效)
-1. [门票260元的山姆成南通最热景区](https://so.toutiao.com/search?keyword=门票260元的山姆成南通最热景区)
 1. [妈妈用尿布包着26个红包给解清帅](https://so.toutiao.com/search?keyword=妈妈用尿布包着26个红包给解清帅)
+1. [这些“龙”背后的谣言你都知道吗](https://so.toutiao.com/search?keyword=这些“龙”背后的谣言你都知道吗)
+1. [贾玲肌肉被亲姐姐质疑是特效](https://so.toutiao.com/search?keyword=贾玲肌肉被亲姐姐质疑是特效)
 1. [最高检评《第二十条》：推卸与担当](https://so.toutiao.com/search?keyword=最高检评《第二十条》：推卸与担当)
-1. [春节顶流《甄嬛传》](https://so.toutiao.com/search?keyword=春节顶流《甄嬛传》)
-1. [外孙选择姥爷手上较小的20元压岁钱](https://so.toutiao.com/search?keyword=外孙选择姥爷手上较小的20元压岁钱)
-1. [山东一景区发生火灾 多辆车被烧毁](https://so.toutiao.com/search?keyword=山东一景区发生火灾+多辆车被烧毁)
-1. [演员王东回应妻子在救助站过年](https://so.toutiao.com/search?keyword=演员王东回应妻子在救助站过年)
-1. [《第二十条》后劲有多大](https://so.toutiao.com/search?keyword=《第二十条》后劲有多大)
-1. [《热辣滚烫》翻拍自日影《百元之恋》](https://so.toutiao.com/search?keyword=《热辣滚烫》翻拍自日影《百元之恋》)
 1. [小叔子出示收款码给嫂子磕头拜年](https://so.toutiao.com/search?keyword=小叔子出示收款码给嫂子磕头拜年)
-1. [张雨霏：被贾玲感动但为啥我没腹肌](https://so.toutiao.com/search?keyword=张雨霏：被贾玲感动但为啥我没腹肌)
-1. [跳水梦之队世锦赛人均金银牌](https://so.toutiao.com/search?keyword=跳水梦之队世锦赛人均金银牌)
-1. [春节后寒潮或将影响我国大部地区](https://so.toutiao.com/search?keyword=春节后寒潮或将影响我国大部地区)
-1. [证监会发布2024年“1号罚单”](https://so.toutiao.com/search?keyword=证监会发布2024年“1号罚单”)
+1. [美防长被转移至重症监护病房](https://so.toutiao.com/search?keyword=美防长被转移至重症监护病房)
+1. [《第二十条》后劲有多大](https://so.toutiao.com/search?keyword=《第二十条》后劲有多大)
 1. [贾玲瘦百斤备忘录曝光](https://so.toutiao.com/search?keyword=贾玲瘦百斤备忘录曝光)
-1. [一个人过年](https://so.toutiao.com/search?keyword=一个人过年)
-1. [沈阳北陵公园冰雪大世界将停止开放](https://so.toutiao.com/search?keyword=沈阳北陵公园冰雪大世界将停止开放)
+1. [《第二十条》教你如何保护自己](https://so.toutiao.com/search?keyword=《第二十条》教你如何保护自己)
+1. [张雨霏：被贾玲感动但为啥我没腹肌](https://so.toutiao.com/search?keyword=张雨霏：被贾玲感动但为啥我没腹肌)
+1. [演员王东回应妻子在救助站过年](https://so.toutiao.com/search?keyword=演员王东回应妻子在救助站过年)
+1. [门票260元的山姆成南通最热景区](https://so.toutiao.com/search?keyword=门票260元的山姆成南通最热景区)
+1. [《热辣滚烫》翻拍自日影《百元之恋》](https://so.toutiao.com/search?keyword=《热辣滚烫》翻拍自日影《百元之恋》)
+1. [过年的慵懒感到达顶峰](https://so.toutiao.com/search?keyword=过年的慵懒感到达顶峰)
 1. [2024年A股退市大幕开启](https://so.toutiao.com/search?keyword=2024年A股退市大幕开启)
-1. [副局长春节期间酒驾被查](https://so.toutiao.com/search?keyword=副局长春节期间酒驾被查)
+1. [证监会发布2024年“1号罚单”](https://so.toutiao.com/search?keyword=证监会发布2024年“1号罚单”)
+1. [春节后寒潮或将影响我国大部地区](https://so.toutiao.com/search?keyword=春节后寒潮或将影响我国大部地区)
+1. [沈阳北陵公园冰雪大世界将停止开放](https://so.toutiao.com/search?keyword=沈阳北陵公园冰雪大世界将停止开放)
 1. [拜登：特朗普打算给普京“开绿灯”](https://so.toutiao.com/search?keyword=拜登：特朗普打算给普京“开绿灯”)
+1. [一个人过年](https://so.toutiao.com/search?keyword=一个人过年)
+1. [跳水梦之队世锦赛人均金银牌](https://so.toutiao.com/search?keyword=跳水梦之队世锦赛人均金银牌)
+1. [山东一景区发生火灾 多辆车被烧毁](https://so.toutiao.com/search?keyword=山东一景区发生火灾+多辆车被烧毁)
+1. [你家过年吵架了吗](https://so.toutiao.com/search?keyword=你家过年吵架了吗)
+1. [女子背巨无霸香上山许愿](https://so.toutiao.com/search?keyword=女子背巨无霸香上山许愿)
+1. [外孙选择姥爷手上较小的20元压岁钱](https://so.toutiao.com/search?keyword=外孙选择姥爷手上较小的20元压岁钱)
+1. [副局长春节期间酒驾被查](https://so.toutiao.com/search?keyword=副局长春节期间酒驾被查)
+1. [瘦了的贾玲像张泉灵？张泉灵回应](https://so.toutiao.com/search?keyword=瘦了的贾玲像张泉灵？张泉灵回应)
+1. [特朗普“挑衅”言论激怒欧洲人](https://so.toutiao.com/search?keyword=特朗普“挑衅”言论激怒欧洲人)
+1. [中央气象台继续发布大风蓝色预警](https://so.toutiao.com/search?keyword=中央气象台继续发布大风蓝色预警)
+1. [现代起亚电动汽车销量突破150万辆](https://so.toutiao.com/search?keyword=现代起亚电动汽车销量突破150万辆)
+1. [男生给奶奶磕头拜年 小狗在旁模仿](https://so.toutiao.com/search?keyword=男生给奶奶磕头拜年+小狗在旁模仿)
+1. [乔尔杰维奇：杨瀚森的起点很高](https://so.toutiao.com/search?keyword=乔尔杰维奇：杨瀚森的起点很高)
+1. [《在暴雪时分》殷果演我八卦](https://so.toutiao.com/search?keyword=《在暴雪时分》殷果演我八卦)
+1. [每年数百人给87岁老教师磕头拜年](https://so.toutiao.com/search?keyword=每年数百人给87岁老教师磕头拜年)
+1. [巴基斯坦公布国民议会选举最终结果](https://so.toutiao.com/search?keyword=巴基斯坦公布国民议会选举最终结果)
+1. [张杰夸杨紫演技棒 有自己的风格](https://so.toutiao.com/search?keyword=张杰夸杨紫演技棒+有自己的风格)
+1. [春节顶流《甄嬛传》](https://so.toutiao.com/search?keyword=春节顶流《甄嬛传》)
+1. [张杰回应张家不养闲人](https://so.toutiao.com/search?keyword=张杰回应张家不养闲人)
+1. [雷佳音回应连续出演张艺谋电影](https://so.toutiao.com/search?keyword=雷佳音回应连续出演张艺谋电影)
+1. [女生为抢拜年红包“弹射式”磕头](https://so.toutiao.com/search?keyword=女生为抢拜年红包“弹射式”磕头)
 1. [斯图布当选芬兰新总统](https://so.toutiao.com/search?keyword=斯图布当选芬兰新总统)
 1. [小孩揣“金砖”给太奶奶磕头拜年](https://so.toutiao.com/search?keyword=小孩揣“金砖”给太奶奶磕头拜年)
 1. [贾玲时尚芭莎封面预告](https://so.toutiao.com/search?keyword=贾玲时尚芭莎封面预告)
-1. [特朗普“挑衅”言论激怒欧洲人](https://so.toutiao.com/search?keyword=特朗普“挑衅”言论激怒欧洲人)
-1. [你家过年吵架了吗](https://so.toutiao.com/search?keyword=你家过年吵架了吗)
 1. [尼日利亚最大银行CEO在美坠机身亡](https://so.toutiao.com/search?keyword=尼日利亚最大银行CEO在美坠机身亡)
 1. [联合国呼吁保护加沙地带平民](https://so.toutiao.com/search?keyword=联合国呼吁保护加沙地带平民)
-1. [男生给奶奶磕头拜年 小狗在旁模仿](https://so.toutiao.com/search?keyword=男生给奶奶磕头拜年+小狗在旁模仿)
 1. [乌称俄军在用“星链” 马斯克回应](https://so.toutiao.com/search?keyword=乌称俄军在用“星链”+马斯克回应)
-1. [乔尔杰维奇：杨瀚森的起点很高](https://so.toutiao.com/search?keyword=乔尔杰维奇：杨瀚森的起点很高)
-1. [每年数百人给87岁老教师磕头拜年](https://so.toutiao.com/search?keyword=每年数百人给87岁老教师磕头拜年)
 1. [外地逃犯到合肥景区游玩被抓获](https://so.toutiao.com/search?keyword=外地逃犯到合肥景区游玩被抓获)
-1. [女子背巨无霸香上山许愿](https://so.toutiao.com/search?keyword=女子背巨无霸香上山许愿)
-1. [女生为抢拜年红包“弹射式”磕头](https://so.toutiao.com/search?keyword=女生为抢拜年红包“弹射式”磕头)
-1. [张杰夸杨紫演技棒 有自己的风格](https://so.toutiao.com/search?keyword=张杰夸杨紫演技棒+有自己的风格)
 1. [南方人的取暖方式](https://so.toutiao.com/search?keyword=南方人的取暖方式)
-1. [现代起亚电动汽车销量突破150万辆](https://so.toutiao.com/search?keyword=现代起亚电动汽车销量突破150万辆)
-1. [雷佳音回应连续出演张艺谋电影](https://so.toutiao.com/search?keyword=雷佳音回应连续出演张艺谋电影)
 1. [研究：月震或影响未来人类探月](https://so.toutiao.com/search?keyword=研究：月震或影响未来人类探月)
 1. [叙利亚两处美国非法驻军基地遭袭](https://so.toutiao.com/search?keyword=叙利亚两处美国非法驻军基地遭袭)
 1. [沙特阿美暂停产能扩张计划](https://so.toutiao.com/search?keyword=沙特阿美暂停产能扩张计划)
-1. [巴基斯坦公布国民议会选举最终结果](https://so.toutiao.com/search?keyword=巴基斯坦公布国民议会选举最终结果)
-1. [瘦了的贾玲像张泉灵？张泉灵回应](https://so.toutiao.com/search?keyword=瘦了的贾玲像张泉灵？张泉灵回应)
 1. [国产大飞机C919龙年首飞](https://so.toutiao.com/search?keyword=国产大飞机C919龙年首飞)
 1. [法国女演员指控两位知名导演性侵](https://so.toutiao.com/search?keyword=法国女演员指控两位知名导演性侵)
 1. [甘肃积石山县发生3.1级地震](https://so.toutiao.com/search?keyword=甘肃积石山县发生3.1级地震)
@@ -70,7 +73,6 @@
 1. [女子收1000元红包回礼左右为难](https://so.toutiao.com/search?keyword=女子收1000元红包回礼左右为难)
 1. [男子过年给交警发万元红包被退还](https://so.toutiao.com/search?keyword=男子过年给交警发万元红包被退还)
 1. [海口三港发布停航预警](https://so.toutiao.com/search?keyword=海口三港发布停航预警)
-1. [中央气象台继续发布大风蓝色预警](https://so.toutiao.com/search?keyword=中央气象台继续发布大风蓝色预警)
 1. [琼州海峡航运返程高峰分批次放票](https://so.toutiao.com/search?keyword=琼州海峡航运返程高峰分批次放票)
 1. [春节档电影最大赢家竟是魏翔](https://so.toutiao.com/search?keyword=春节档电影最大赢家竟是魏翔)
 1. [认养一头牛折戟IPO](https://so.toutiao.com/search?keyword=认养一头牛折戟IPO)
@@ -95,7 +97,6 @@
 1. [2024中国网络视听年度盛典](https://so.toutiao.com/search?keyword=2024中国网络视听年度盛典)
 1. [《飞驰人生2》张驰终于不留遗憾](https://so.toutiao.com/search?keyword=《飞驰人生2》张驰终于不留遗憾)
 1. [雷佳音回应总演窝囊废](https://so.toutiao.com/search?keyword=雷佳音回应总演窝囊废)
-1. [《在暴雪时分》殷果演我八卦](https://so.toutiao.com/search?keyword=《在暴雪时分》殷果演我八卦)
 1. [2023年俄国内生产总值同比增长3.6%](https://so.toutiao.com/search?keyword=2023年俄国内生产总值同比增长3.6%)
 1. [《死侍3》全球首支预告发布](https://so.toutiao.com/search?keyword=《死侍3》全球首支预告发布)
 1. [女生帮爸爸染头发结果翻车](https://so.toutiao.com/search?keyword=女生帮爸爸染头发结果翻车)
