--- a/archives/toutiao-search/2024-02-13.md
+++ b/archives/toutiao-search/2024-02-13.md
@@ -1,56 +1,67 @@
 # 2024-02-13
 
-共 115 条
+共 126 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Feb 13 2024 08:25:43 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Feb 13 2024 09:37:55 GMT+0800 (China Standard Time) -->
 1. [贾玲瘦身后第一次见观众泪流满面](https://so.toutiao.com/search?keyword=贾玲瘦身后第一次见观众泪流满面)
 1. [尼格买提微表情被当成典型“案例”](https://so.toutiao.com/search?keyword=尼格买提微表情被当成典型“案例”)
 1. [看一条龙能多有“FUN儿”](https://so.toutiao.com/search?keyword=看一条龙能多有“FUN儿”)
 1. [正月初四“迎灶神”](https://so.toutiao.com/search?keyword=正月初四“迎灶神”)
-1. [以军对拉法发动海陆空全方位打击](https://so.toutiao.com/search?keyword=以军对拉法发动海陆空全方位打击)
-1. [“白敬亭春山学事件”到底怎么回事](https://so.toutiao.com/search?keyword=“白敬亭春山学事件”到底怎么回事)
-1. [贾玲张小斐坐在一起跷二郎腿](https://so.toutiao.com/search?keyword=贾玲张小斐坐在一起跷二郎腿)
-1. [摔炮的风还是吹到了伦敦](https://so.toutiao.com/search?keyword=摔炮的风还是吹到了伦敦)
-1. [尼格买提说自己3天没笑了](https://so.toutiao.com/search?keyword=尼格买提说自己3天没笑了)
+1. [警匪动作片《缉恶》打得有多硬核](https://so.toutiao.com/search?keyword=警匪动作片《缉恶》打得有多硬核)
+1. [重庆一男子逆行撞车后企图逃离](https://so.toutiao.com/search?keyword=重庆一男子逆行撞车后企图逃离)
 1. [四人酒后把猪食当成粥 吃饱才发现](https://so.toutiao.com/search?keyword=四人酒后把猪食当成粥+吃饱才发现)
-1. [过年的慵懒感到达顶峰](https://so.toutiao.com/search?keyword=过年的慵懒感到达顶峰)
-1. [这些“龙”背后的谣言你都知道吗](https://so.toutiao.com/search?keyword=这些“龙”背后的谣言你都知道吗)
-1. [哈尔滨松花江冰雪嘉年华停止开放](https://so.toutiao.com/search?keyword=哈尔滨松花江冰雪嘉年华停止开放)
+1. [贾玲张小斐坐在一起跷二郎腿](https://so.toutiao.com/search?keyword=贾玲张小斐坐在一起跷二郎腿)
 1. [小叔子出示收款码给嫂子磕头拜年](https://so.toutiao.com/search?keyword=小叔子出示收款码给嫂子磕头拜年)
-1. [《上春山》舞台逐帧分析](https://so.toutiao.com/search?keyword=《上春山》舞台逐帧分析)
-1. [普京接受采访的视频收看量达10亿次](https://so.toutiao.com/search?keyword=普京接受采访的视频收看量达10亿次)
-1. [《飞驰人生2》票房破10亿](https://so.toutiao.com/search?keyword=《飞驰人生2》票房破10亿)
-1. [央视文艺回复尼格买提：再播亿遍](https://so.toutiao.com/search?keyword=央视文艺回复尼格买提：再播亿遍)
+1. [看完热辣滚烫的后遗症来了](https://so.toutiao.com/search?keyword=看完热辣滚烫的后遗症来了)
+1. [以军对拉法发动海陆空全方位打击](https://so.toutiao.com/search?keyword=以军对拉法发动海陆空全方位打击)
+1. [这些“龙”背后的谣言你都知道吗](https://so.toutiao.com/search?keyword=这些“龙”背后的谣言你都知道吗)
+1. [尼格买提说自己3天没笑了](https://so.toutiao.com/search?keyword=尼格买提说自己3天没笑了)
 1. [《第二十条》教你如何保护自己](https://so.toutiao.com/search?keyword=《第二十条》教你如何保护自己)
-1. [贾玲瘦百斤备忘录曝光](https://so.toutiao.com/search?keyword=贾玲瘦百斤备忘录曝光)
-1. [演员王东回应妻子在救助站过年](https://so.toutiao.com/search?keyword=演员王东回应妻子在救助站过年)
-1. [妈妈用尿布包着26个红包给解清帅](https://so.toutiao.com/search?keyword=妈妈用尿布包着26个红包给解清帅)
-1. [姐妹俩包饺子 妈妈看到美甲无语了](https://so.toutiao.com/search?keyword=姐妹俩包饺子+妈妈看到美甲无语了)
-1. [《第二十条》后劲有多大](https://so.toutiao.com/search?keyword=《第二十条》后劲有多大)
-1. [最高检评《第二十条》：推卸与担当](https://so.toutiao.com/search?keyword=最高检评《第二十条》：推卸与担当)
-1. [美防长被转移至重症监护病房](https://so.toutiao.com/search?keyword=美防长被转移至重症监护病房)
-1. [贾玲肌肉被亲姐姐质疑是特效](https://so.toutiao.com/search?keyword=贾玲肌肉被亲姐姐质疑是特效)
-1. [男生给奶奶磕头拜年 小狗在旁模仿](https://so.toutiao.com/search?keyword=男生给奶奶磕头拜年+小狗在旁模仿)
-1. [六旬老人买基金亏超30%状告代销行](https://so.toutiao.com/search?keyword=六旬老人买基金亏超30%状告代销行)
-1. [《热辣滚烫》翻拍自日影《百元之恋》](https://so.toutiao.com/search?keyword=《热辣滚烫》翻拍自日影《百元之恋》)
-1. [瘦了的贾玲像张泉灵？张泉灵回应](https://so.toutiao.com/search?keyword=瘦了的贾玲像张泉灵？张泉灵回应)
-1. [贾玲时尚芭莎封面预告](https://so.toutiao.com/search?keyword=贾玲时尚芭莎封面预告)
-1. [沈阳北陵公园冰雪大世界将停止开放](https://so.toutiao.com/search?keyword=沈阳北陵公园冰雪大世界将停止开放)
-1. [门票260元的山姆成南通最热景区](https://so.toutiao.com/search?keyword=门票260元的山姆成南通最热景区)
-1. [证监会发布2024年“1号罚单”](https://so.toutiao.com/search?keyword=证监会发布2024年“1号罚单”)
-1. [2024年A股退市大幕开启](https://so.toutiao.com/search?keyword=2024年A股退市大幕开启)
-1. [副局长春节期间酒驾被查](https://so.toutiao.com/search?keyword=副局长春节期间酒驾被查)
-1. [张杰回应张家不养闲人](https://so.toutiao.com/search?keyword=张杰回应张家不养闲人)
-1. [外孙选择姥爷手上较小的20元压岁钱](https://so.toutiao.com/search?keyword=外孙选择姥爷手上较小的20元压岁钱)
-1. [春节顶流《甄嬛传》](https://so.toutiao.com/search?keyword=春节顶流《甄嬛传》)
 1. [名宿：梅西是GOAT中的GOAT](https://so.toutiao.com/search?keyword=名宿：梅西是GOAT中的GOAT)
-1. [雷佳音回应连续出演张艺谋电影](https://so.toutiao.com/search?keyword=雷佳音回应连续出演张艺谋电影)
+1. [央视文艺回复尼格买提：再播亿遍](https://so.toutiao.com/search?keyword=央视文艺回复尼格买提：再播亿遍)
+1. [《飞驰人生2》票房破10亿](https://so.toutiao.com/search?keyword=《飞驰人生2》票房破10亿)
+1. [以方称将提供撤离拉法的安全通道](https://so.toutiao.com/search?keyword=以方称将提供撤离拉法的安全通道)
+1. [媒体：贾玲是中国电影圈真“芭比”](https://so.toutiao.com/search?keyword=媒体：贾玲是中国电影圈真“芭比”)
+1. [《热辣滚烫》翻拍自日影《百元之恋》](https://so.toutiao.com/search?keyword=《热辣滚烫》翻拍自日影《百元之恋》)
+1. [演员王东回应妻子在救助站过年](https://so.toutiao.com/search?keyword=演员王东回应妻子在救助站过年)
+1. [贾玲肌肉被亲姐姐质疑是特效](https://so.toutiao.com/search?keyword=贾玲肌肉被亲姐姐质疑是特效)
+1. [普京接受采访的视频收看量达10亿次](https://so.toutiao.com/search?keyword=普京接受采访的视频收看量达10亿次)
+1. [美防长被转移至重症监护病房](https://so.toutiao.com/search?keyword=美防长被转移至重症监护病房)
+1. [大年初四一起齐乐龙龙](https://so.toutiao.com/search?keyword=大年初四一起齐乐龙龙)
 1. [每年数百人给87岁老教师磕头拜年](https://so.toutiao.com/search?keyword=每年数百人给87岁老教师磕头拜年)
+1. [小米回复印度政府：深感忧虑](https://so.toutiao.com/search?keyword=小米回复印度政府：深感忧虑)
+1. [《第二十条》后劲有多大](https://so.toutiao.com/search?keyword=《第二十条》后劲有多大)
+1. [姐妹俩包饺子 妈妈看到美甲无语了](https://so.toutiao.com/search?keyword=姐妹俩包饺子+妈妈看到美甲无语了)
+1. [贾玲瘦百斤备忘录曝光](https://so.toutiao.com/search?keyword=贾玲瘦百斤备忘录曝光)
+1. [副局长春节期间酒驾被查](https://so.toutiao.com/search?keyword=副局长春节期间酒驾被查)
+1. [六旬老人买基金亏超30%状告代销行](https://so.toutiao.com/search?keyword=六旬老人买基金亏超30%状告代销行)
+1. [门票260元的山姆成南通最热景区](https://so.toutiao.com/search?keyword=门票260元的山姆成南通最热景区)
+1. [男生给奶奶磕头拜年 小狗在旁模仿](https://so.toutiao.com/search?keyword=男生给奶奶磕头拜年+小狗在旁模仿)
+1. [证监会发布2024年“1号罚单”](https://so.toutiao.com/search?keyword=证监会发布2024年“1号罚单”)
+1. [贾玲时尚芭莎封面预告](https://so.toutiao.com/search?keyword=贾玲时尚芭莎封面预告)
+1. [哈尔滨松花江冰雪嘉年华停止开放](https://so.toutiao.com/search?keyword=哈尔滨松花江冰雪嘉年华停止开放)
+1. [丁威迪：能招募我归功于詹姆斯](https://so.toutiao.com/search?keyword=丁威迪：能招募我归功于詹姆斯)
+1. [妈妈用尿布包着26个红包给解清帅](https://so.toutiao.com/search?keyword=妈妈用尿布包着26个红包给解清帅)
+1. [沈阳北陵公园冰雪大世界停止开放](https://so.toutiao.com/search?keyword=沈阳北陵公园冰雪大世界停止开放)
+1. [张杰回应张家不养闲人](https://so.toutiao.com/search?keyword=张杰回应张家不养闲人)
+1. [瘦了的贾玲像张泉灵？张泉灵回应](https://so.toutiao.com/search?keyword=瘦了的贾玲像张泉灵？张泉灵回应)
+1. [雷佳音回应连续出演张艺谋电影](https://so.toutiao.com/search?keyword=雷佳音回应连续出演张艺谋电影)
 1. [张雨霏：被贾玲感动但为啥我没腹肌](https://so.toutiao.com/search?keyword=张雨霏：被贾玲感动但为啥我没腹肌)
-1. [雷佳音回应总演窝囊废](https://so.toutiao.com/search?keyword=雷佳音回应总演窝囊废)
-1. [拜登：特朗普打算给普京“开绿灯”](https://so.toutiao.com/search?keyword=拜登：特朗普打算给普京“开绿灯”)
+1. [2024年A股退市大幕开启](https://so.toutiao.com/search?keyword=2024年A股退市大幕开启)
 1. [春节后寒潮或将影响我国大部地区](https://so.toutiao.com/search?keyword=春节后寒潮或将影响我国大部地区)
+1. [加拉格尔社媒庆祝切尔西客胜水晶宫](https://so.toutiao.com/search?keyword=加拉格尔社媒庆祝切尔西客胜水晶宫)
+1. [外孙选择姥爷手上较小的20元压岁钱](https://so.toutiao.com/search?keyword=外孙选择姥爷手上较小的20元压岁钱)
+1. [《热辣滚烫》曝新海报](https://so.toutiao.com/search?keyword=《热辣滚烫》曝新海报)
+1. [雷佳音回应总演窝囊废](https://so.toutiao.com/search?keyword=雷佳音回应总演窝囊废)
+1. [“白敬亭春山学事件”到底怎么回事](https://so.toutiao.com/search?keyword=“白敬亭春山学事件”到底怎么回事)
+1. [摔炮的风还是吹到了伦敦](https://so.toutiao.com/search?keyword=摔炮的风还是吹到了伦敦)
+1. [过年的慵懒感到达顶峰](https://so.toutiao.com/search?keyword=过年的慵懒感到达顶峰)
+1. [《上春山》舞台逐帧分析](https://so.toutiao.com/search?keyword=《上春山》舞台逐帧分析)
+1. [最高检评《第二十条》：推卸与担当](https://so.toutiao.com/search?keyword=最高检评《第二十条》：推卸与担当)
+1. [沈阳北陵公园冰雪大世界将停止开放](https://so.toutiao.com/search?keyword=沈阳北陵公园冰雪大世界将停止开放)
+1. [春节顶流《甄嬛传》](https://so.toutiao.com/search?keyword=春节顶流《甄嬛传》)
+1. [拜登：特朗普打算给普京“开绿灯”](https://so.toutiao.com/search?keyword=拜登：特朗普打算给普京“开绿灯”)
 1. [男子下山踩空腰扭伤 幸遇老中医](https://so.toutiao.com/search?keyword=男子下山踩空腰扭伤+幸遇老中医)
 1. [特朗普“挑衅”言论激怒欧洲人](https://so.toutiao.com/search?keyword=特朗普“挑衅”言论激怒欧洲人)
 1. [女生为抢拜年红包“弹射式”磕头](https://so.toutiao.com/search?keyword=女生为抢拜年红包“弹射式”磕头)
