--- a/archives/toutiao-search/2024-02-13.md
+++ b/archives/toutiao-search/2024-02-13.md
@@ -1,58 +1,72 @@
 # 2024-02-13
 
-共 126 条
+共 137 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Feb 13 2024 09:37:55 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Feb 13 2024 10:12:45 GMT+0800 (China Standard Time) -->
 1. [贾玲瘦身后第一次见观众泪流满面](https://so.toutiao.com/search?keyword=贾玲瘦身后第一次见观众泪流满面)
 1. [尼格买提微表情被当成典型“案例”](https://so.toutiao.com/search?keyword=尼格买提微表情被当成典型“案例”)
 1. [看一条龙能多有“FUN儿”](https://so.toutiao.com/search?keyword=看一条龙能多有“FUN儿”)
 1. [正月初四“迎灶神”](https://so.toutiao.com/search?keyword=正月初四“迎灶神”)
-1. [警匪动作片《缉恶》打得有多硬核](https://so.toutiao.com/search?keyword=警匪动作片《缉恶》打得有多硬核)
-1. [重庆一男子逆行撞车后企图逃离](https://so.toutiao.com/search?keyword=重庆一男子逆行撞车后企图逃离)
-1. [四人酒后把猪食当成粥 吃饱才发现](https://so.toutiao.com/search?keyword=四人酒后把猪食当成粥+吃饱才发现)
+1. [《第二十条》法律不是冰冷的逻辑](https://so.toutiao.com/search?keyword=《第二十条》法律不是冰冷的逻辑)
+1. [姐妹俩包饺子 妈妈看到美甲无语了](https://so.toutiao.com/search?keyword=姐妹俩包饺子+妈妈看到美甲无语了)
+1. [《第二十条》后劲有多大](https://so.toutiao.com/search?keyword=《第二十条》后劲有多大)
 1. [贾玲张小斐坐在一起跷二郎腿](https://so.toutiao.com/search?keyword=贾玲张小斐坐在一起跷二郎腿)
-1. [小叔子出示收款码给嫂子磕头拜年](https://so.toutiao.com/search?keyword=小叔子出示收款码给嫂子磕头拜年)
-1. [看完热辣滚烫的后遗症来了](https://so.toutiao.com/search?keyword=看完热辣滚烫的后遗症来了)
-1. [以军对拉法发动海陆空全方位打击](https://so.toutiao.com/search?keyword=以军对拉法发动海陆空全方位打击)
+1. [四人酒后把猪食当成粥 吃饱才发现](https://so.toutiao.com/search?keyword=四人酒后把猪食当成粥+吃饱才发现)
+1. [哈尔滨松花江冰雪嘉年华停止开放](https://so.toutiao.com/search?keyword=哈尔滨松花江冰雪嘉年华停止开放)
+1. [余承东开问界M9回深圳称全程无接管](https://so.toutiao.com/search?keyword=余承东开问界M9回深圳称全程无接管)
 1. [这些“龙”背后的谣言你都知道吗](https://so.toutiao.com/search?keyword=这些“龙”背后的谣言你都知道吗)
-1. [尼格买提说自己3天没笑了](https://so.toutiao.com/search?keyword=尼格买提说自己3天没笑了)
+1. [小叔子出示收款码给嫂子磕头拜年](https://so.toutiao.com/search?keyword=小叔子出示收款码给嫂子磕头拜年)
+1. [以军对拉法发动海陆空全方位打击](https://so.toutiao.com/search?keyword=以军对拉法发动海陆空全方位打击)
 1. [《第二十条》教你如何保护自己](https://so.toutiao.com/search?keyword=《第二十条》教你如何保护自己)
+1. [尼格买提说自己3天没笑了](https://so.toutiao.com/search?keyword=尼格买提说自己3天没笑了)
+1. [小米回复印度政府：深感忧虑](https://so.toutiao.com/search?keyword=小米回复印度政府：深感忧虑)
 1. [名宿：梅西是GOAT中的GOAT](https://so.toutiao.com/search?keyword=名宿：梅西是GOAT中的GOAT)
 1. [央视文艺回复尼格买提：再播亿遍](https://so.toutiao.com/search?keyword=央视文艺回复尼格买提：再播亿遍)
-1. [《飞驰人生2》票房破10亿](https://so.toutiao.com/search?keyword=《飞驰人生2》票房破10亿)
+1. [《热辣滚烫》曝新海报](https://so.toutiao.com/search?keyword=《热辣滚烫》曝新海报)
+1. [每年数百人给87岁老教师磕头拜年](https://so.toutiao.com/search?keyword=每年数百人给87岁老教师磕头拜年)
+1. [贾玲肌肉被亲姐姐质疑是特效](https://so.toutiao.com/search?keyword=贾玲肌肉被亲姐姐质疑是特效)
+1. [看完热辣滚烫的后遗症来了](https://so.toutiao.com/search?keyword=看完热辣滚烫的后遗症来了)
+1. [门票260元的山姆成南通最热景区](https://so.toutiao.com/search?keyword=门票260元的山姆成南通最热景区)
+1. [李雪琴谈和乔杉拍情感戏的感受](https://so.toutiao.com/search?keyword=李雪琴谈和乔杉拍情感戏的感受)
+1. [沈阳北陵公园冰雪大世界停止开放](https://so.toutiao.com/search?keyword=沈阳北陵公园冰雪大世界停止开放)
 1. [以方称将提供撤离拉法的安全通道](https://so.toutiao.com/search?keyword=以方称将提供撤离拉法的安全通道)
+1. [副局长春节期间酒驾被查](https://so.toutiao.com/search?keyword=副局长春节期间酒驾被查)
+1. [普京接受采访的视频收看量达10亿次](https://so.toutiao.com/search?keyword=普京接受采访的视频收看量达10亿次)
 1. [媒体：贾玲是中国电影圈真“芭比”](https://so.toutiao.com/search?keyword=媒体：贾玲是中国电影圈真“芭比”)
+1. [六旬老人买基金亏超30%状告代销行](https://so.toutiao.com/search?keyword=六旬老人买基金亏超30%状告代销行)
+1. [女子回老家过年 弟弟团列队迎接](https://so.toutiao.com/search?keyword=女子回老家过年+弟弟团列队迎接)
+1. [专家：以色列空袭拉法有双重目的](https://so.toutiao.com/search?keyword=专家：以色列空袭拉法有双重目的)
+1. [证监会发布2024年“1号罚单”](https://so.toutiao.com/search?keyword=证监会发布2024年“1号罚单”)
+1. [妈妈用尿布包着26个红包给解清帅](https://so.toutiao.com/search?keyword=妈妈用尿布包着26个红包给解清帅)
+1. [美防长被转移至重症监护病房](https://so.toutiao.com/search?keyword=美防长被转移至重症监护病房)
+1. [雷佳音回应连续出演张艺谋电影](https://so.toutiao.com/search?keyword=雷佳音回应连续出演张艺谋电影)
+1. [贾玲时尚芭莎封面预告](https://so.toutiao.com/search?keyword=贾玲时尚芭莎封面预告)
+1. [男生给奶奶磕头拜年 小狗在旁模仿](https://so.toutiao.com/search?keyword=男生给奶奶磕头拜年+小狗在旁模仿)
+1. [白鹿把《声声慢》唱出了江南韵味](https://so.toutiao.com/search?keyword=白鹿把《声声慢》唱出了江南韵味)
+1. [2024年A股退市大幕开启](https://so.toutiao.com/search?keyword=2024年A股退市大幕开启)
+1. [湖人主帅：考虑用三后卫阵容](https://so.toutiao.com/search?keyword=湖人主帅：考虑用三后卫阵容)
+1. [小柯基回村过年变身“有轨电狗”](https://so.toutiao.com/search?keyword=小柯基回村过年变身“有轨电狗”)
+1. [比特币向上触及50000美元/枚](https://so.toutiao.com/search?keyword=比特币向上触及50000美元/枚)
+1. [《飞驰人生2》张驰终于不留遗憾](https://so.toutiao.com/search?keyword=《飞驰人生2》张驰终于不留遗憾)
+1. [春节档电影最大赢家竟是魏翔](https://so.toutiao.com/search?keyword=春节档电影最大赢家竟是魏翔)
+1. [女生帮爸爸染头发结果翻车](https://so.toutiao.com/search?keyword=女生帮爸爸染头发结果翻车)
+1. [《我们一起摇太阳》好哭又好笑](https://so.toutiao.com/search?keyword=《我们一起摇太阳》好哭又好笑)
+1. [张杰回应张家不养闲人](https://so.toutiao.com/search?keyword=张杰回应张家不养闲人)
+1. [津媒分析泰山队VS川崎前锋取胜可能](https://so.toutiao.com/search?keyword=津媒分析泰山队VS川崎前锋取胜可能)
+1. [警匪动作片《缉恶》打得有多硬核](https://so.toutiao.com/search?keyword=警匪动作片《缉恶》打得有多硬核)
+1. [重庆一男子逆行撞车后企图逃离](https://so.toutiao.com/search?keyword=重庆一男子逆行撞车后企图逃离)
+1. [《飞驰人生2》票房破10亿](https://so.toutiao.com/search?keyword=《飞驰人生2》票房破10亿)
 1. [《热辣滚烫》翻拍自日影《百元之恋》](https://so.toutiao.com/search?keyword=《热辣滚烫》翻拍自日影《百元之恋》)
 1. [演员王东回应妻子在救助站过年](https://so.toutiao.com/search?keyword=演员王东回应妻子在救助站过年)
-1. [贾玲肌肉被亲姐姐质疑是特效](https://so.toutiao.com/search?keyword=贾玲肌肉被亲姐姐质疑是特效)
-1. [普京接受采访的视频收看量达10亿次](https://so.toutiao.com/search?keyword=普京接受采访的视频收看量达10亿次)
-1. [美防长被转移至重症监护病房](https://so.toutiao.com/search?keyword=美防长被转移至重症监护病房)
 1. [大年初四一起齐乐龙龙](https://so.toutiao.com/search?keyword=大年初四一起齐乐龙龙)
-1. [每年数百人给87岁老教师磕头拜年](https://so.toutiao.com/search?keyword=每年数百人给87岁老教师磕头拜年)
-1. [小米回复印度政府：深感忧虑](https://so.toutiao.com/search?keyword=小米回复印度政府：深感忧虑)
-1. [《第二十条》后劲有多大](https://so.toutiao.com/search?keyword=《第二十条》后劲有多大)
-1. [姐妹俩包饺子 妈妈看到美甲无语了](https://so.toutiao.com/search?keyword=姐妹俩包饺子+妈妈看到美甲无语了)
 1. [贾玲瘦百斤备忘录曝光](https://so.toutiao.com/search?keyword=贾玲瘦百斤备忘录曝光)
-1. [副局长春节期间酒驾被查](https://so.toutiao.com/search?keyword=副局长春节期间酒驾被查)
-1. [六旬老人买基金亏超30%状告代销行](https://so.toutiao.com/search?keyword=六旬老人买基金亏超30%状告代销行)
-1. [门票260元的山姆成南通最热景区](https://so.toutiao.com/search?keyword=门票260元的山姆成南通最热景区)
-1. [男生给奶奶磕头拜年 小狗在旁模仿](https://so.toutiao.com/search?keyword=男生给奶奶磕头拜年+小狗在旁模仿)
-1. [证监会发布2024年“1号罚单”](https://so.toutiao.com/search?keyword=证监会发布2024年“1号罚单”)
-1. [贾玲时尚芭莎封面预告](https://so.toutiao.com/search?keyword=贾玲时尚芭莎封面预告)
-1. [哈尔滨松花江冰雪嘉年华停止开放](https://so.toutiao.com/search?keyword=哈尔滨松花江冰雪嘉年华停止开放)
 1. [丁威迪：能招募我归功于詹姆斯](https://so.toutiao.com/search?keyword=丁威迪：能招募我归功于詹姆斯)
-1. [妈妈用尿布包着26个红包给解清帅](https://so.toutiao.com/search?keyword=妈妈用尿布包着26个红包给解清帅)
-1. [沈阳北陵公园冰雪大世界停止开放](https://so.toutiao.com/search?keyword=沈阳北陵公园冰雪大世界停止开放)
-1. [张杰回应张家不养闲人](https://so.toutiao.com/search?keyword=张杰回应张家不养闲人)
 1. [瘦了的贾玲像张泉灵？张泉灵回应](https://so.toutiao.com/search?keyword=瘦了的贾玲像张泉灵？张泉灵回应)
-1. [雷佳音回应连续出演张艺谋电影](https://so.toutiao.com/search?keyword=雷佳音回应连续出演张艺谋电影)
 1. [张雨霏：被贾玲感动但为啥我没腹肌](https://so.toutiao.com/search?keyword=张雨霏：被贾玲感动但为啥我没腹肌)
-1. [2024年A股退市大幕开启](https://so.toutiao.com/search?keyword=2024年A股退市大幕开启)
 1. [春节后寒潮或将影响我国大部地区](https://so.toutiao.com/search?keyword=春节后寒潮或将影响我国大部地区)
 1. [加拉格尔社媒庆祝切尔西客胜水晶宫](https://so.toutiao.com/search?keyword=加拉格尔社媒庆祝切尔西客胜水晶宫)
 1. [外孙选择姥爷手上较小的20元压岁钱](https://so.toutiao.com/search?keyword=外孙选择姥爷手上较小的20元压岁钱)
-1. [《热辣滚烫》曝新海报](https://so.toutiao.com/search?keyword=《热辣滚烫》曝新海报)
 1. [雷佳音回应总演窝囊废](https://so.toutiao.com/search?keyword=雷佳音回应总演窝囊废)
 1. [“白敬亭春山学事件”到底怎么回事](https://so.toutiao.com/search?keyword=“白敬亭春山学事件”到底怎么回事)
 1. [摔炮的风还是吹到了伦敦](https://so.toutiao.com/search?keyword=摔炮的风还是吹到了伦敦)
@@ -96,7 +110,6 @@
 1. [男子过年给交警发万元红包被退还](https://so.toutiao.com/search?keyword=男子过年给交警发万元红包被退还)
 1. [海口三港发布停航预警](https://so.toutiao.com/search?keyword=海口三港发布停航预警)
 1. [琼州海峡航运返程高峰分批次放票](https://so.toutiao.com/search?keyword=琼州海峡航运返程高峰分批次放票)
-1. [春节档电影最大赢家竟是魏翔](https://so.toutiao.com/search?keyword=春节档电影最大赢家竟是魏翔)
 1. [认养一头牛折戟IPO](https://so.toutiao.com/search?keyword=认养一头牛折戟IPO)
 1. [这届年轻人真的不想结婚吗](https://so.toutiao.com/search?keyword=这届年轻人真的不想结婚吗)
 1. [普京：2023俄罗斯经济增长高于预期](https://so.toutiao.com/search?keyword=普京：2023俄罗斯经济增长高于预期)
@@ -116,10 +129,8 @@
 1. [滕哈赫：曼联可以击败任何对手](https://so.toutiao.com/search?keyword=滕哈赫：曼联可以击败任何对手)
 1. [科通技术IPO上会前夕被取消审议](https://so.toutiao.com/search?keyword=科通技术IPO上会前夕被取消审议)
 1. [2024中国网络视听年度盛典](https://so.toutiao.com/search?keyword=2024中国网络视听年度盛典)
-1. [《飞驰人生2》张驰终于不留遗憾](https://so.toutiao.com/search?keyword=《飞驰人生2》张驰终于不留遗憾)
 1. [2023年俄国内生产总值同比增长3.6%](https://so.toutiao.com/search?keyword=2023年俄国内生产总值同比增长3.6%)
 1. [《死侍3》全球首支预告发布](https://so.toutiao.com/search?keyword=《死侍3》全球首支预告发布)
-1. [女生帮爸爸染头发结果翻车](https://so.toutiao.com/search?keyword=女生帮爸爸染头发结果翻车)
 1. [广东人过年送礼三件套](https://so.toutiao.com/search?keyword=广东人过年送礼三件套)
 1. [白百何初三晒回娘家视频](https://so.toutiao.com/search?keyword=白百何初三晒回娘家视频)
 1. [马丽拜托各影院给第二十条多排片](https://so.toutiao.com/search?keyword=马丽拜托各影院给第二十条多排片)
